Revert "AriesParts: strip down to display settings"
This reverts commit 0c4459e63cfdbcf87b15bb131b269c48d6c3b3c6.

--- a/AriesParts/AndroidManifest.xml
+++ b/AriesParts/AndroidManifest.xml
@@ -7,7 +7,7 @@
    <application android:label="@string/app_name"
                 android:icon="@drawable/icon"
                 android:supportsRtl="true">
-      <activity android:name=".DisplaySettings"
+      <activity android:name=".DeviceSettings"
                 android:label="@string/app_name">
       </activity>
       <receiver android:name=".Startup">
